Fix left and right links gap

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -50,7 +50,7 @@ a {
 
 .left-links, .right-links {
   display: flex;
-  gap: 10px;
+  gap: 16px;
   margin: 10px;
   padding: 0px;
 }
